[package]
name = "zd-primitives"
version = "0.0.1"
authors = ["Patract <https://github.com/patractlabs/patract>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
serde = { version = "1.0.119", optional = true, features = ["derive"] }
primitive-types = {default-features = false, version = '0.8.0'}
sp-core = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
frame-support = { default-features = false, version = '3.0.0' }

[dev-dependencies]
sp-io = { default-features = false, version = '3.0.0' }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-system/std",
]
