[package]
authors = ["ZeroDAO <https://github.com/ZeroDAO>"]
description = 'The challenge logic of the TIR algorithm.'
name = 'zd-challenges'
repository = "https://github.com/ZeroDAO/ourspace"
license = "Apache-2.0"
version = "0.0.1"
homepage = 'https://zerodao.net'
edition = "2018"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { features = ['derive'], optional = true, version = '1.0.119' }
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }

zd-support = { path = "../support", default-features = false, version = '0.0.1' }
zd-primitives = { path = "../../primitives", default-features = false, version = '0.0.1' }
zd-tokens = { path = "../tokens", default-features = false, version = '0.0.1' }

orml-traits = { default-features = false, version = "0.4.0"}

[dev-dependencies]
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-std = { version = "3.0.0", default-features = false }

zd-reputation = {path = "../reputation", default-features = false, version = '0.0.1'}
orml-tokens = {default-features = false, version = '0.4.0'}
orml-currencies = {default-features = false, version = "0.4.0"}
pallet-balances = {default-features = false, version = '3.0.0'}

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-runtime/std',
    'zd-support/std',
    'orml-traits/std',
    'orml-tokens/std',
    'zd-reputation/std',
    'pallet-balances/std',
]
