[package]
authors = ["ZeroDAO <https://github.com/ZeroDAO>"]
description = 'The challenge logic of the TIR algorithm.'
edition = "2018"
homepage = 'https://0p0.org'
license = "Apache-2.0"
name = 'zd-refresh-reputation'
repository = "https://github.com/ZeroDAO/ZeroDAO-node"
version = "0.0.1"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
frame-support = {default-features = false, version = '3.0.0'}
frame-system = {default-features = false, version = '3.0.0'}
sp-runtime = {default-features = false, version = '3.0.0'}
sp-std = {version = "3.0.0", default-features = false}

zd-primitives = {path = "../../primitives", default-features = false, version = '0.0.1'}
zd-traits = {path = "../../traits", default-features = false, version = '0.0.1'}
zd-utilities = {path = "../utilities", default-features = false, version = '0.0.1'}

# orml extensions
orml-traits = {default-features = false, version = "0.4.0", git = 'https://github.com/ZeroDAO/open-runtime-module-library.git', tag = '0.4.0.1'}
# orml-traits = {default-features = false, version = '0.4.0', path = "../../../open-runtime-module-library/traits"}

[dev-dependencies]
pallet-balances = {default-features = false, version = '3.0.0'}
serde = {version = "1.0.111"}
sp-core = {default-features = false, version = '3.0.0'}
sp-io = {default-features = false, version = '3.0.0'}

zd-challenges = {path = "../challenges", default-features = false, version = '0.0.1'}
zd-reputation = {path = "../reputation", default-features = false, version = '0.0.1'}
zd-seeds = {path = "../seeds", default-features = false, version = '0.0.1'}
# zd-tokens = {path = "../tokens", default-features = false, version = '0.0.1'}
zd-trust = {path = "../trust", default-features = false, version = '0.0.1'}
zd-challenges = {path = "../challenges", default-features = false, version = '0.0.1'}

orml-currencies = {default-features = false, version = "0.4.0", git = 'https://github.com/ZeroDAO/open-runtime-module-library.git', tag = '0.4.0.1'}
orml-tokens = {default-features = false, version = '0.4.0', git = 'https://github.com/ZeroDAO/open-runtime-module-library.git', tag = '0.4.0.1'}
# orml-currencies = {default-features = false, version = '0.4.0', path = "../../../open-runtime-module-library/currencies"}
# orml-tokens = {default-features = false, version = '0.4.0', path = "../../../open-runtime-module-library/tokens"}

[features]
default = ['std']
std = [
  'codec/std',
  "sp-runtime/std",
  'frame-support/std',
  'frame-system/std',
  'orml-traits/std',
  'zd-traits/std',
  "sp-std/std",
  "zd-utilities/std",
  "zd-challenges/std",
  "zd-reputation/std",
  "zd-seeds/std", # "zd-tokens/std",
  "zd-trust/std",
  "orml-currencies/std",
  "orml-tokens/std",
]
