[package]
authors = ["ZeroDAO <https://github.com/ZeroDAO>"]
description = 'The challenge logic of the TIR algorithm.'
name = 'zd-refresh-seeds'
repository = "https://github.com/ZeroDAO/ZeroDAO-node"
license = "Apache-2.0"
version = "0.0.1"
homepage = 'https://0p0.org'
edition = "2018"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { features = ['derive'], optional = true, version = '1.0.119' }
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-std = { version = "3.0.0", default-features = false }

zd-traits = { path = "../../traits", default-features = false, version = '0.0.1' }
zd-primitives = { path = "../../primitives", default-features = false, version = '0.0.1' }

orml-traits = { default-features = false, version = "0.4.0", git = 'https://github.com/ZeroDAO/open-runtime-module-library.git', branch = 'feature-zerodao' }

[dev-dependencies]
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-runtime/std',
    'zd-traits/std',
    'orml-traits/std',
]
