[package]
authors = ["ZeroDAO <https://github.com/ZeroDAO>"]
description = 'The Refresh Seeds logic of the TIR algorithm.'
name = 'zd-refresh-seeds'
repository = "https://github.com/ZeroDAO/ourspace"
license = "Apache-2.0"
version = "0.0.1"
homepage = 'https://zerodao.net'
edition = "2018"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
sha-1 = {default-features = false, version = '0.9.7'}
serde = {features = ['derive'], optional = true, version = '1.0.119'}

frame-support = {default-features = false, version = '3.0.0'}
frame-system = {default-features = false, version = '3.0.0'}
sp-runtime = {default-features = false, version = '3.0.0'}
sp-std = {version = "3.0.0", default-features = false}

zd-primitives = {path = "../../primitives", default-features = false, version = '0.0.1'}
zd-support = {path = "../support", default-features = false, version = '0.0.1'}

orml-utilities = {default-features = false, version = '0.4.0', git = 'https://github.com/ZeroDAO/open-runtime-module-library.git', rev = '02dbda5'}

[dev-dependencies]
sp-io = {default-features = false, version = '3.0.0'}
sp-core = {default-features = false, version = '3.0.0'}
pallet-balances = {default-features = false, version = '3.0.0'}

zd-challenges = {path = "../challenges", default-features = false, version = '0.0.1'}
zd-reputation = {path = "../reputation", default-features = false, version = '0.0.1'}
zd-seeds = {path = "../seeds", default-features = false, version = '0.0.1'}
zd-tokens = {path = "../tokens", default-features = false, version = '0.0.1'}
zd-trust = {path = "../trust", default-features = false, version = '0.0.1'}

orml-currencies = {default-features = false, version = "0.4.0"}
orml-tokens = {default-features = false, version = '0.4.0'}
orml-traits = {default-features = false, version = "0.4.0"}

[features]
default = ['std']
std = [
  'serde',
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'sp-std/std',
  'sp-core/std',
  'sp-runtime/std',
  'zd-support/std',
  'orml-utilities/std',
  'zd-primitives/std', # 'sha-1/std',
  'zd-reputation/std',
  'orml-tokens/std',
]
