[package]
authors = ["ZeroDAO <https://github.com/ZeroDAO>"]
description = 'The challenge logic of the TIR algorithm.'
edition = "2018"
homepage = 'https://0p0.org'
license = "Apache-2.0"
name = 'zd-reputation'
repository = "https://github.com/ZeroDAO/ZeroDAO-node"
version = "0.0.1"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
frame-support = {default-features = false, version = '3.0.0'}
frame-system = {default-features = false, version = '3.0.0'}
serde = {version = "1.0.111", optional = true}
sp-runtime = {default-features = false, version = '3.0.0'}
zd-traits = {path = "../../traits", default-features = false, version = '0.0.1'}

[dev-dependencies]
sp-core = {default-features = false, version = '3.0.0'}
sp-io = {default-features = false, version = '3.0.0'}

[features]
default = ['std']
std = [
  'serde',
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  "sp-runtime/std",
  "zd-traits/std",
]
