[package]
authors = ["ZeroDAO <https://github.com/ZeroDAO>"]
description = 'The core of the Reputation System.'
name = 'zd-reputation'
repository = "https://github.com/ZeroDAO/ourspace"
license = "Apache-2.0"
version = "0.0.1"
homepage = 'https://zerodao.net'
edition = "2018"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
frame-support = {default-features = false, version = '3.0.0'}
frame-system = {default-features = false, version = '3.0.0'}
serde = {version = "1.0.111", optional = true}
sp-runtime = {default-features = false, version = '3.0.0'}

zd-support = {path = "../support", default-features = false, version = '0.0.1'}
zd-primitives = { path = "../../primitives", default-features = false, version = '0.0.1' }

[dev-dependencies]
sp-core = {default-features = false, version = '3.0.0'}
sp-io = {default-features = false, version = '3.0.0'}

[features]
default = ['std']
std = [
  'serde',
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  "sp-runtime/std",
  "zd-support/std",
  "zd-primitives/std",
]
