[package]
authors = ["ZeroDAO <https://github.com/ZeroDAO>"]
description = 'The challenge logic of the TIR algorithm.'
edition = "2018"
homepage = 'https://0p0.org'
license = "Apache-2.0"
name = 'zd-seeds'
repository = "https://github.com/ZeroDAO/ZeroDAO-node"
version = "0.0.1"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
frame-support = {default-features = false, version = '3.0.0'}
frame-system = {default-features = false, version = '3.0.0'}
sp-runtime = {default-features = false, version = '3.0.0'}

orml-utilities = {default-features = false, version = '0.4.0', git = 'https://github.com/ZeroDAO/open-runtime-module-library.git', rev = '02dbda5'}
zd-primitives = {path = "../../primitives", default-features = false, version = '0.0.1'}
zd-support = {path = "../support", default-features = false, version = '0.0.1'}

[dev-dependencies]
serde = {version = "1.0.119"}
sp-core = {default-features = false, version = '3.0.0'}
sp-io = {default-features = false, version = '3.0.0'}
zd-reputation = {path = "../reputation", default-features = false, version = '0.0.1'}

[features]
default = ['std']
std = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'zd-support/std',
  'zd-reputation/std',
  'orml-utilities/std',
]
