[package]
name = "zd-support"
description = "Shared traits including `Renew`, `Reputation`, `Seed` and `Trust`."
repository = "https://github.com/ZeroDAO/ZeroDAO-node/tree/master/traits"
license = "Apache-2.0"
version = "0.0.1"
authors = ["ZeroDAO <https://github.com/ZeroDAO>"]
homepage = 'https://0p0.org'
edition = "2018"

[dependencies]
serde = { version = "1.0.119", optional = true }
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
zd-primitives = { path = "../../primitives", default-features = false, version = '0.0.1' }

[dev-dependencies]
sp-io = { version = "3.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
]
