[package]
name = "zd-tokens"
description = "Support social finance"
repository = "https://github.com/ZeroDAO/ZeroDAO-node"
license = "Apache-2.0"
version = "0.0.1"
authors = ["ZeroDAO <https://github.com/ZeroDAO>"]
homepage = 'https://0p0.org'
edition = "2018"

[dependencies]
serde = { version = "1.0.119", optional = true }
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
# frame-benchmarking = { version = "3.1.0", default-features = false, optional = true }

zd-primitives = {path = "../../primitives", default-features = false, version = '0.0.1'}
zd-support = {path = "../support", default-features = false, version = '0.0.1'}

orml-traits = { default-features = false, version = "0.4.0", git = 'https://github.com/ZeroDAO/open-runtime-module-library.git', rev = '02dbda5' }

[dev-dependencies]
sp-core = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
pallet-treasury = { version = "3.0.0" }
pallet-elections-phragmen = { version = "3.0.0" }
pallet-balances = { default-features = false, version = '3.0.0' }

# orml extensions
orml-tokens = { default-features = false, version = '0.4.0', git = 'https://github.com/ZeroDAO/open-runtime-module-library.git', rev = '02dbda5' }
orml-currencies = { default-features = false, version = "0.4.0", git = 'https://github.com/ZeroDAO/open-runtime-module-library.git', rev = '02dbda5' }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
	"orml-currencies/std",
	"orml-tokens/std",
	# "frame-benchmarking/std",
]
# runtime-benchmarks = [
	# "frame-benchmarking",
	# "frame-support/runtime-benchmarks",
	# "frame-system/runtime-benchmarks",
# ]
