[package]
authors = ["ZeroDAO <https://github.com/ZeroDAO>"]
description = 'Various utilities.'
name = 'zd-utilities'
repository = "https://github.com/ZeroDAO/ZeroDAO-node"
license = "Apache-2.0"
version = "0.0.1"
homepage = 'https://0p0.org'
edition = "2018"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.119" }
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
funty = { version = "=1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105
orml-utilities = { default-features = false, version = "0.4.0", git = 'https://github.com/ZeroDAO/open-runtime-module-library.git', tag = '0.4.0.1' }

[dev-dependencies]
serde_json = "1.0.64"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
]
